--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -318,7 +318,7 @@
     <div class="atricle-box">
         <!-- <div class = "side"></div> -->
         <!-- <textarea class="page" ></textarea>  -->
-        <div class="article-page" contenteditable="true"><h1>标题</h1><p>正文</p></div>
+        <div id="article-mes" class="article-page" contenteditable="true"><h1>标题</h1><p>正文</p></div>
     </div>
 </div>
 
