--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.html
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.html
@@ -3,7 +3,7 @@
 
 
     <div class="graphContainer">
-        <div ui-sref="microIndustryChain.previewChainView({'articleid':article.id,'graphid':article.graphId})" class="graphCell" ng-repeat="article in allArticleList | limitTo:4">
+        <div ui-sref="microIndustryChain.previewChainView({'articleid':article.id,'graphid':article.graphd})" class="graphCell" ng-repeat="article in allArticleList | limitTo:4">
             <div>
                 <img  src="view/microIndustryChain/mineChainView/cover.png"  class="graph-cover">
             </div>
@@ -15,13 +15,13 @@
                     {{article.author}}
                 </div>
                 <div class="graph-time">
-                    {{article.time.substring(2,6)}}-{{article.time.substring(6,8)}}-{{article.time.substring(8,10)}} {{article.time.substring(10,12)}}:{{article.time.substring(12,14)}}
+                    {{article.time.substring(0,4)}}-{{article.time.substring(4,6)}}-{{article.time.substring(6,8)}} {{article.time.substring(8,10)}}:{{article.time.substring(10,12)}}
                 </div>
             </div>
             <div>
                 <div class="graph-view-num">
                     <img src="view/microIndustryChain/discoverChainView/images/浏览.png">
-                    {{article.watchNum}}
+                    {{article.watchnum}}
                 </div>
                 <div class="graph-like-num">
                     <img src="view/microIndustryChain/discoverChainView/images/点赞.png">
@@ -29,24 +29,24 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="graphLiContainer">
+    </div>i
+    <div  class="graphLiContainer">
         <div class="graphList">
-            <div  ui-sref="microIndustryChain.previewChainView({'graphid':graph.graphid})" class = "graphLiDiv" ng-repeat="article in allArticleList" >
+            <div  ng-if="$index>3" ui-sref="microIndustryChain.previewChainView({'articleid':article.id,'graphid':article.graphId})" class = "graphLiDiv" ng-repeat="article in allArticleList" >
                 <div class="graph-li-title graph-li-con">
                     {{article.title}}
                 </div>
                 <div class="graph-li-author graph-li-con">
-                    {{author.author}}
+                    {{article.author}}
                 </div>
                 <div class="graph-li-time graph-li-con">
-                    {{article.time.substring(2,6)}}-{{article.time.substring(6,8)}}-{{article.time.substring(8,10)}} {{article.time.substring(10,12)}}:{{article.time.substring(12,14)}}
+                    {{article.time.substring(0,4)}}-{{article.time.substring(4,6)}}-{{article.time.substring(6,8)}} {{article.time.substring(8,10)}}:{{article.time.substring(10,12)}}
                 </div>
                 <div class="graph-li-view graph-li-con">
                     <img style="width:18px" src="view/microIndustryChain/discoverChainView/images/浏览.png">
-                    {{article.watchNum}}
+                    {{article.watchnum}}
                 </div>
-            </div>>
+            </div>
         </div>
     </div>
 
