--- a/app/view/microIndustryChain/previewChainView/previewChainView.html
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.html
@@ -228,7 +228,7 @@
                 <div class="author-img">
                     <img src="http://img5.imgtn.bdimg.com/it/u=2347924012,1403917519&fm=200&gp=0.jpg"></div>
                 <div class="author-identity">
-                    <h4 class="author-name">{{articleDetail.author}}</h4>
+                    <h4 class="author-name">{{arNam}}</h4>
                     <p class="author-work">资深全栈工程师</p></div>
             </div>
             <div class="comment_div">
@@ -294,4 +294,4 @@
     <!--</div>-->
 <!--</div>-->
 
-<script src="../../../bower_components/jQuery/dist/jquery.min.js"></script>
+<script src="../../../bower_components/jQuery/dist/jquery.js"></script>
