--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -37,7 +37,7 @@
                 </button>
             </div>
             <div class="topToolBarBigBlockCell" style="width: 25%;min-width: 230px">
-                <button id="publishBtn" class="btn btn-default topToolBarBigBtn"
+                <button id="publishBtn" class="btn btn-default topToolBarBigBtn" ng-click="save()"
                         data-popover="popover" data-trigger="hover" data-placement="bottom"
                         title="发布到社区" data-content="将您的作品【发布】到社区，赚取阅读赏金">
                     <img src="view/microIndustryChain/createChainView/icon/发布.png"> 发布
