行业因子分析界面IC图和多空收益图，只支持单个指标

--- a/app/view/industryFactorAnalyze/industryFactorAnalyze.css
+++ b/app/view/industryFactorAnalyze/industryFactorAnalyze.css
@@ -204,6 +204,9 @@
 .resultAndDetail .analyzeDetail{
     font-size: 18px;
 }
+.resultAndDetail .img_method{
+    max-width: 80%;
+}
 
 a{
     cursor: pointer;
