--- a/app/view/industryFactorAnalyze/industryFactorAnalyze.html
+++ b/app/view/industryFactorAnalyze/industryFactorAnalyze.html
@@ -1,7 +1,7 @@
 <david-nav></david-nav>
 
 <div class="container">
-    <div class="index_description">
+    <div class="index_description" style="display: none;">
         {{description_toShow}}
         <!--对流动资产周转率的补充说明,是衡量企业销售能力及存货管理水平的综合性指标-->
     </div>
