--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -41,7 +41,8 @@
         </div>
         <div class="tendency_hover" style="display: flex;flex-flow: column;  align-items: center; justify-content: center; width: 33%; height: 60%;">
             <div ui-sref="industryFactorAnalyze" class="fast-go-btn go-to-tendency"></div>
-            <h3 style="color: white">舆情分析</h3>
+            <!--<h3 style="color: white">舆情分析</h3>-->
+            <h3 style="color: white">行业因子分析</h3>
             <h5 style="color: white">专业的数据分析框架</h5>
         </div>
     </div>
