--- a/app/view/microIndustryChain/previewChainView/previewChainView.html
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.html
@@ -262,7 +262,7 @@
                                 <!--<p class="step" ng-click="step_comment(comment_detail)">  👎100 </p>-->
                                 <!--<i class="like iconfont icon-good" ng-click="like_comment(comment_detail)" >{{comment_detail.up}}</i>-->
                                 <!--<i class="step iconfont icon-cai" ng-click="step_comment(comment_detail)">{{comment_detail.down}}  </i>-->
-                                <p class="delete iconfont icon-guanbi"  ng-if = "comment_detail.author ==user_id" ng-click="delete_comment(comment_detail)"> </p>
+                                <!--<p class="delete iconfont icon-guanbi"  ng-if = "comment_detail.author ==user_id" ng-click="delete_comment(comment_detail)"> </p>-->
                                 <p class="comment-body">{{comment_detail.comment}}</p>
                                 <p class="comment-footer">
                                     #{{$index+1}}
