修改部分js引用为min.js，宏观部分更换图片路径

--- a/app/view/macroIndustryDisplay/economicData/economicData.html
+++ b/app/view/macroIndustryDisplay/economicData/economicData.html
@@ -4,7 +4,7 @@
 <div class="navBar">
     <hr class="vertical_line">
     <li class="active">
-        <img class="icon_active" src="view/resource/3经济数据/行业及固定资产投资1.png" style="display: initial"/><a class="nav_item active" href="#hycw">行业财务及固定资产投资</a>
+        <img class="icon_active" src="https://citicup.greatnju.com/macro/pic_economicData/行业及固定资产投资1.png" style="display: initial"/><a class="nav_item active" href="#hycw">行业财务及固定资产投资</a>
         <ul style="display: inherit;">
             <li><a class="nav2_item active" href="#div_hygc">行业概况</a></li>
             <li><a class="nav2_item" href="#div_zgqchycwsj">中国汽车行业财务数据</a></li>
@@ -12,19 +12,20 @@
         </ul>
     </li>
     <li>
-        <img class="icon_active" src="view/resource/3经济数据/行业上下游数据1.png"/><a class="nav_item" href="#hysxysj">行业上下游数据</a>
+        <img class="icon_active" src="https://citicup.greatnju.com/macro/pic_economicData/行业上下游数据1.png"/><a class="nav_item" href="#hysxysj">行业上下游数据</a>
         <ul>
             <li><a class="nav2_item" href="#div_hysxysj">行业上下游数据</a></li>
         </ul>
     </li>
     <li>
-        <img class="icon_active" src="view/resource/3经济数据/企业绩效1.png"/><a class="nav_item" href="#qyjx">企业绩效</a>
+        <img class="icon_active" src="https://citicup.greatnju.com/macro/pic_economicData/企业绩效1.png"/><a class="nav_item" href="#qyjx">企业绩效</a>
         <ul>
             <li><a class="nav2_item" href="#div_qyjx">企业绩效</a></li>
         </ul>
     </li>
 </div>
 
+<div style="height: 50px;"></div>
 <div id="hycw" class="part">
 
     <div id="div_hygc" class="part2">
