--- a/app/view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.html
+++ b/app/view/macroIndustryDisplay/industryStatus/hyssdw/hyssdw.html
@@ -2,21 +2,21 @@
 <div class="navBar">
     <hr class="vertical_line">
     <li class="active">
-        <img class="icon_active" src="view/resource/4行业地位/行业上市地位1.png" style="display: initial"/><a class="nav_item active" ui-sref="macroIndustryDisplay.hyssdw">行业上市地位</a>
+        <img class="icon_active" src="https://citicup.greatnju.com/macro/pic_industryStatus/行业上市地位1.png" style="display: initial"/><a class="nav_item active" ui-sref="macroIndustryDisplay.hyssdw">行业上市地位</a>
 
     </li>
 
 
     <li>
-        <img class="icon_active" src="view/resource/4行业地位/行业历史比较以及市场表现对比1.png"/><a class="nav_item" ui-sref="macroIndustryDisplay.hylsbj">行业历史比较</a>
+        <img class="icon_active" src="https://citicup.greatnju.com/macro/pic_industryStatus/行业历史比较以及市场表现对比1.png"/><a class="nav_item" ui-sref="macroIndustryDisplay.hylsbj">行业历史比较</a>
 
     </li>
     <li>
-        <img class="icon_active" src="view/resource/4行业地位/行业历史比较以及市场表现对比1.png"/><a class="nav_item" ui-sref="macroIndustryDisplay.scbxdb">市场表现对比</a>
+        <img class="icon_active" src="https://citicup.greatnju.com/macro/pic_industryStatus/行业历史比较以及市场表现对比1.png"/><a class="nav_item" ui-sref="macroIndustryDisplay.scbxdb">市场表现对比</a>
 
     </li>
 </div>
-<img src="view/resource/4行业地位/线条.png" style="margin-left: 5%">
+<img src="https://citicup.greatnju.com/macro/pic_industryStatus/线条.png" style="margin-left: 5%">
 <div style="margin-left: 27%;width: 50%;margin-top: -88.4%">
 <div style="display: inline-block;padding: 5px 0px 0px 15px;height: 40px;width: 100%;">
     <label style="color: #d6d6d6;font-size: 16px">市场</label>
