--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.html
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.html
@@ -1,5 +1,5 @@
 <br>
-<script src="../../bower_components/echarts/dist/echarts.js"></script>
+<!--<script src="../../bower_components/echarts/dist/echarts.js"></script>-->
 
 <div class="bg_macro"></div>
 <!--顶部导航栏-->
