--- a/app/view/macroIndustryDisplay/macroIndustryList.html
+++ b/app/view/macroIndustryDisplay/macroIndustryList.html
@@ -5,7 +5,8 @@
 <!--行业列表的容器-->
 <div class="list_container">
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/军事工业.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/军事工业.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/军事工业.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">军事工业</h3>
@@ -17,7 +18,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/家用电器.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/家用电器.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/家用电器.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">家用电器</h3>
@@ -29,7 +31,8 @@
         </div>
     </div>
     <div class="industryListItem" ui-sref="macroIndustryDisplay.generalInfo">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/汽车.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/汽车.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/汽车.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">汽车</h3>
@@ -41,7 +44,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/生物产业.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/生物产业.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/生物产业.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">生物产业</h3>
@@ -53,7 +57,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/旅游业.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/旅游业.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/旅游业.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">旅游业</h3>
@@ -65,7 +70,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/房地产.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/房地产.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/房地产.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">房地产</h3>
@@ -77,7 +83,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/煤炭.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/煤炭.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/煤炭.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">煤炭</h3>
@@ -89,7 +96,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/服装纺织.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/服装纺织.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/服装纺织.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">服装纺织</h3>
@@ -101,7 +109,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/影视业.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/影视业.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/影视业.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">影视业</h3>
@@ -113,7 +122,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/机器人.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/机器人.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/机器人.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">机器人</h3>
@@ -125,7 +135,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/体育.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/体育.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/体育.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">体育</h3>
@@ -137,7 +148,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/VR.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/VR.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/VR.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">VR</h3>
@@ -149,7 +161,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/重型机械.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/重型机械.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/重型机械.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">重型机械</h3>
@@ -161,7 +174,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/家用家居.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/家用家居.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/家用家居.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">家用家居</h3>
@@ -173,7 +187,8 @@
         </div>
     </div>
     <div class="industryListItem">
-        <img class="img_industry" src="view/macroIndustryDisplay/pic_industry/海洋交通运输.png"/>
+        <img class="img_industry" src="https://citicup.greatnju.com/macro/pic_industry/海洋交通运输.png"/>
+        <!--<img class="img_industry" src="view/macroIndustryDisplay/pic_industry/海洋交通运输.png"/>-->
         <div class="cover_industry" style="opacity: 0;"></div>
         <div class="content_industry">
             <h3 class="title_industry">海洋交通运输</h3>
