--- a/app/view/macroIndustryDisplay/mainQuotedCompany/scbx/scbx.html
+++ b/app/view/macroIndustryDisplay/mainQuotedCompany/scbx/scbx.html
@@ -1,9 +1,9 @@
-<img src="view/resource/5主要上市公司/线条下.png" style="margin-top: 5%;margin-left:-23.5%;width: 1800px">
+<img src="https://citicup.greatnju.com/macro/pic_mainQuotedCompany/线条下.png" style="margin-top: 5%;margin-left:-23.5%;width: 1800px">
 
 <div class="pane" ng-show="toShowPane">
     <div class="paneTitle">
         指标选择
-        <img class="closeIcon" ng-click="close()" src="view/macroIndustryDisplay/mainQuotedCompany/pic/icon-close.png" style="width: 10px;height: 10px;position: absolute;left: 96%;top:5px">
+        <img class="closeIcon" ng-click="close()" src="https://citicup.greatnju.com/macro/pic_mainQuotedCompany/icon-close.png" style="width: 10px;height: 10px;position: absolute;left: 96%;top:5px">
 
     </div>
 
@@ -66,7 +66,7 @@
         </select>
 
         <label style="margin-left: 200px;color: #d6d6d6">统计数据</label>
-        <div id='myInput' class="myInput" ng-click="toShow=!toShow">最高值,平均值<img src="view/macroIndustryDisplay/mainQuotedCompany/pic/arrow.png" style="width: 5.5px;height: 4.7px;float: right;margin-top: 5px;margin-right: 5px"></div>
+        <div id='myInput' class="myInput" ng-click="toShow=!toShow">最高值,平均值<img src="https://citicup.greatnju.com/macro/pic_mainQuotedCompany/arrow.png" style="width: 5.5px;height: 4.7px;float: right;margin-top: 5px;margin-right: 5px"></div>
         <button style="display: inline-block;padding-bottom: 20px;margin-left: 200px;color:#a2a4e3;" ng-click="toShowPane=!toShowPane">指标选择</button>
         <div id='mySelect' class="mySelect" ng-show="toShow">
             <div class="option"><input checked id='最高值'ng-click="check('最高值')" type="checkbox" value="最高值">最高值</div>
