--- a/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
+++ b/app/view/macroIndustryDisplay/generalInfo/generalInfo.css
@@ -558,7 +558,8 @@
     /*left: 700px;*/
     top: 0px;
 
-    background: url(../../../view/resource/圆角矩形.png) no-repeat;
+    background: url("https://citicup.greatnju.com/macro/pic_wholeView/圆角矩形.png") no-repeat;
+    /*background: url(../../../view/resource/圆角矩形.png) no-repeat;*/
     background-size: 100% 100%;
     height: 821px;
     width: 722px;
