--- a/app/view/microIndustryChain/discoverChainView/discoverChainView.css
+++ b/app/view/microIndustryChain/discoverChainView/discoverChainView.css
@@ -192,3 +192,18 @@ html, body {
 /*.title-text{*/
     /*display: inline;*/
 /*}*/
+.search-input{
+    width: 200px;
+    height: 30px;
+    border-radius: 2em;
+    background: #fff;
+    border: none;
+    font-size: 15px;
+    outline: none;
+    margin-left: 70%;
+    padding-left: 30px;
+    background:url(images/搜索.png) no-repeat 0 0;
+    background-position: 10px 5px;
+    background-size: 20px 20px;
+    background-color: #fff;
+}
